--- a/devops/ansible/roles/project/templates/django-China-api.env.j2
+++ b/devops/ansible/roles/project/templates/django-China-api.env.j2
@@ -9,3 +9,7 @@ DJANGO_DATABASE_DEFAULT_URL={{ django_database_default_url }}
 SENTRY_DSN={{ sentry_dsn }}
 DJANGO_ADMIN_URL={{ django_admin_url }}
 DJANGO_ADMINS=""
+DJANGO_EMAIL_HOST=smtp.163.com
+DJANGO_EMAIL_PORT=465
+DJANGO_EMAIL_HOST_USER={{ django_email_host_user }}
+DJANGO_EMAIL_HOST_PASSWORD={{ django_email_host_password }}
